[package]
name = "glhelper"
version = "0.1.12"
authors = ["Joseph A Mark <sjeohp@gmail.com>"]
license = "MIT"
description = "Convenience methods for opengl."
repository = "https://github.com/sjeohp/rust-glhelper.git"

[lib]
name = "glhelper"
path = "src/lib.rs"

[dependencies]
gl = "0.6.1"

[dev-dependencies]
sdl2 = "0.29.1"